more generic fix for icon spacing

--- a/src/less/pick-a-color-docs.less
+++ b/src/less/pick-a-color-docs.less
@@ -291,7 +291,7 @@ pre {
 	margin-top:4px;
 }
 
-.btn.btn-large [class^="icon-"], .btn.btn-large [class*=" icon-"] {
+[class^="icon-"], [class*=" icon-"] {
 	@media screen and (max-width: 767px) {
 		margin-right: 5px;
 	}
